# SysOpy

cw01/Zad1/: CMakeLists.txt
cw01/Zad1/include/: cbook.h
cw01/Zad1/src/: cbook.c
cw01/Zad2/: CMakeLists.txt
cw01/Zad2/include/: cbook.h
cw01/Zad2/src/: main.c
cw01/Zad3/: CMakeLists.txt  komentarz.txt
cw01/Zad3/include/: cbook.h
cw01/Zad3/src/: main.c  maindll.c
cw01/Zad4/: CMakeLists.txt  gdb.txt
cw01/Zad4/include/: cbook.h
cw01/Zad4/src/: main.c
cw02/Zad1/: CMakeLists.txt
cw02/Zad1/src/: main.c
cw02/Zad2/: CMakeLists.txt
cw02/Zad2/src/: main-nftw.c  main.c
cw02/Zad3/: CMakeLists.txt
cw02/Zad3/src/: main.c
cw03/Zad1/: CMakeLists.txt
cw03/Zad1/src/: main.c  print_env.c
cw03/Zad2/: CMakeLists.txt
cw03/Zad2/src/: inf.c  main.c  print-env.c
cw04/Zad1/: CMakeLists.txt
cw04/Zad1/src/: main.c
cw04/Zad2/: CMakeLists.txt
cw04/Zad2/src/: main.c
